--- a/client/app/stats/stats.html
+++ b/client/app/stats/stats.html
@@ -10,40 +10,43 @@
       </uib-progress>
   </div>
   <div class="row col-sm-10 col-sm-offset-1 well">
-    <div class="col-sm-6">
+    <div class="col-sm-10 col-sm-offset-1">
+      <h4>General performance</h4>
+    </div>
+    <div class="col-sm-10 col-sm-offset-1">
+      <label>Total saved jobs</label>
+      <uib-progressbar max="stats.total" value="stats.total" type="info">
+        <span>{{stats.total}}</span>
+      </uib-progressbar>
+    </div>
+    <div class="col-sm-10 col-sm-offset-1">
       <label>Jobs applied to out of total saved jobs</label>
-      <uib-progressbar max="stats.total" value="stats.applied" type="success">
+      <uib-progressbar max="stats.total" value="stats.applied" type="warning">
         <span>{{stats.applied}} / {{stats.total}}</span>
       </uib-progressbar>
     </div>
-    <div class="col-sm-6">
-      <label>Response rate</label>
-      <uib-progressbar max="stats.applied" value="stats.responded" type="info">
-        <span>{{stats.responded}} / {{stats.applied}}</span>
+    <div class="col-sm-10 col-sm-offset-1">
+      <label>Got a response</label>
+      <uib-progressbar max="stats.total" value="stats.responded" type="success">
+        <span>{{stats.responded}} / {{stats.total}}</span>
       </uib-progressbar>
     </div>
-    <div class="col-sm-6">
+    <div class="col-sm-10 col-sm-offset-1">
       <label>Reached phone screen</label>
-      <uib-progressbar max="stats.applied" value="stats.phone" type="info">
-        <span>{{stats.phone}} / {{stats.applied}}</span>
+      <uib-progressbar max="stats.total" value="stats.phone" type="info">
+        <span>{{stats.phone}} / {{stats.total}}</span>
       </uib-progressbar>
     </div>
-    <div class="col-sm-6">
+    <div class="col-sm-10 col-sm-offset-1">
       <label>Reached interview stage</label>
-      <uib-progressbar max="stats.applied" value="stats.interview" type="success">
-        <span>{{stats.interview}} / {{stats.applied}}</span>
+      <uib-progressbar max="stats.total" value="stats.interview" type="warning">
+        <span>{{stats.interview}} / {{stats.total}}</span>
       </uib-progressbar>
     </div>
-    <div class="col-sm-6">
-      <label>Applications without response</label>
-      <uib-progressbar max="stats.applied" value="stats.noresponse" type="warning">
-        <span>{{stats.noresponse}} / {{stats.applied}}</span>
-      </uib-progressbar>
-    </div>
-    <div class="col-sm-6">
-      <label>Applications rejected</label>
-      <uib-progressbar max="stats.applied" value="stats.rejected" type="danger">
-        <span>{{stats.rejected}} / {{stats.applied}}</span>
+    <div class="col-sm-10 col-sm-offset-1">
+      <label>Offers received</label>
+      <uib-progressbar max="stats.total" value="stats.offer" type="success">
+        <span>{{stats.offer}} / {{stats.total}}</span>
       </uib-progressbar>
     </div>
   </div>
