[FEATURE](Client): Click on link in get news modal opens new tab {VE}

--- a/client/app/mainList/getNews.html
+++ b/client/app/mainList/getNews.html
@@ -10,9 +10,9 @@
       </a>
     </div>
     <div class="media-body">
-      <li>{{story.title}}</li>
-      <li>{{story.displayLink}}</li>
-      <li>{{story.snippet}}</li>
+      <h4 class="media-heading">{{story.title}}</h4>
+      <a href="{{story.link}}" target="_blank">{{story.displayLink}}</a>
+      <p>{{story.snippet}}</p>
     </div>
   </ul>
 
