[Fix](Client): fixed sorting and active stat function {IA}

--- a/client/app/mainList/mainList.html
+++ b/client/app/mainList/mainList.html
@@ -28,15 +28,15 @@
           Company
           <span class="glyphicon glyphicon-sort" aria-hidden="true"></span>
         </th>
-        <th class="col-sm-3" ng-click="sortHeader = 'title'; sortReverse = !sortReverse">
+        <th class="col-sm-3" ng-click="sortHeader = 'jobTitle'; sortReverse = !sortReverse">
           Title
           <span class="glyphicon glyphicon-sort" aria-hidden="true"></span>
         </th>
-        <th class="col-sm-2" ng-click="sortHeader = 'interest'; sortReverse = !sortReverse">
+        <th class="col-sm-2" ng-click="sortHeader = 'interestLevel'; sortReverse = !sortReverse">
           Interest
           <span class="glyphicon glyphicon-sort" aria-hidden="true"></span>
         </th>
-        <th class="col-sm-2" ng-click="sortHeader = 'status'; sortReverse = !sortReverse">
+        <th class="col-sm-2" ng-click="sortHeader = 'status.rejected || status.progress'; sortReverse = !sortReverse">
           Status
           <span class="glyphicon glyphicon-sort" aria-hidden="true"></span>
         </th>
