[FEATURE](Client): Removed environment vairbales from gitinclude files {VE}

--- a/client/app/mainList/getNews.html
+++ b/client/app/mainList/getNews.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <h3 class="modal-title" id="modal-title">News about {{$ctrl.news.stories.queries.request[0].searchTerms}}</h3>
+    <h3 class="modal-title" id="modal-title">News about {{$ctrl.searchQuery}}</h3>
 </div>
 <div class="modal-body" id="modal-body">
 
