[Profile](client):Created profile pages html and js

--- a/client/app/navbar/navbar.html
+++ b/client/app/navbar/navbar.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Jåger</a>
     <ul class="nav navbar-nav">
-      <li ng-class="{active: isActive('/')}"><a href="#">My Profile</a></li>
+      <li ng-class="{active: isActive('/profile')}"><a href="#/profile">My Profile</a></li>
       <li ng-class="{active: isActive('/mainList')}"><a href="#/mainList">My Jobs</a></li>
       <li ng-class="{active: isActive('/stats')}"><a href="#/stats">My Stats</a></li>
     </ul>
