--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Job-Tracker</title>
-    
+
     <script src="lib/jquery/dist/jquery.min.js"></script>
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css"/>
     <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -39,6 +39,12 @@
     <script src="app/demo/demo.js"></script>
     <script src="app/mainList/getNews/getNews.js"></script>
     <script src="app/mainList/removeModal/removeModal.js"></script>
+
+    <script src="app/profile/profile.js"></script>
+    <script src="app/profile/editProfile.js"></script>
+    <script src="app/profile/changePassword.js"></script>
+
+
 
     <script src="app/services/externalApiFactory.js"></script>
     <script src="app/services/AuthFactory.js"></script>
