--- a/client/app/mainList/mainList.html
+++ b/client/app/mainList/mainList.html
@@ -68,7 +68,7 @@
               <small><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
             </td>
           <td id='entry' editable-select="job.status" e-ng-options="s.value as s.text for s in statuses"
-            onaftersave="editJob(job)">
+            onaftersave="editJob(job, $data)">
               {{ showStatus(job) }}
               <small><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
             </td>
