--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -2,9 +2,9 @@
   <div class="container-fluid">
     <a class="navbar-brand" >JobTracker</a>
     <ul class="nav navbar-nav">
-      <li><a ng-href="#!/demo">Try It</a></li>
-      <li><a ng-href ="#!/signup">Sign up</a></li>
-      <li><a ng-href ="#!/login">Login</a></li>
+      <li><a ng-href="#/demo">Try It</a></li>
+      <li><a ng-href ="#/signup">Sign up</a></li>
+      <li><a ng-href ="#/login">Login</a></li>
     </ul>
   </div>
 </nav>
