--- a/client/index.html
+++ b/client/index.html
@@ -30,6 +30,7 @@
     <script src="app/stats/stats.js"></script>
     <script src="app/demo/demo.js"></script>
     <script src="app/mainList/getNews.js"></script>
+    <script src="app/mainList/removeModal.js"></script>
 
     <script src="app/services/externalApiFactory.js"></script>
     <script src="app/services/AuthFactory.js"></script>
