[add](client) landing page {nwf}

--- a/client/app/navbar/navbar.html
+++ b/client/app/navbar/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-default col-md-12">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">JobTracker</a>
+    <a class="navbar-brand" href="#">Jåger</a>
     <ul class="nav navbar-nav">
       <li ng-class="{active: isActive('/')}"><a href="#">My Profile</a></li>
       <li ng-class="{active: isActive('/mainList')}"><a href="#/mainList">My Jobs</a></li>
