--- a/client/index.html
+++ b/client/index.html
@@ -6,8 +6,9 @@
     <script src="lib/jquery/dist/jquery.min.js"></script>
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css"/>
     <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
-    
-    <link rel="stylesheet" type="text/css" href="styles/style.css" />
+    <link rel="stylesheet" type="text/css" href="styles/style.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Armata|Comfortaa|Nixie+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   </head>
   <body>
     <div ui-view></div>
