--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-default col-lg-12">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">JobTracker</a>
+    <a class="navbar-brand" href="#">Jåger</a>
     <ul class="nav navbar-nav">
       <li><a href="#/demo">Try It</a></li>
       <li><a href="#/signup">Sign up</a></li>
