[INIT](Client): Create gulp config file for api variables {VE}

--- a/client/index.html
+++ b/client/index.html
@@ -22,6 +22,8 @@
     <script src="lib/angular-xeditable/dist/js/xeditable.js"></script>
     <script src="lib/angular-validation-match/dist/angular-validation-match.js"></script>
 
+    <script src="app/config.js"></script>
+
     <script src="app/navbar/navbar.js"></script>
     <script src="app/auth/login/login.js"></script>
     <script src="app/mainList/mainListDir.js"></script>
