--- a/client/app/mainList/mainList.html
+++ b/client/app/mainList/mainList.html
@@ -54,23 +54,23 @@
     </thead>
       <tbody>
         <tr ng-repeat-start='job in pagedData | filter: search | orderBy: sortHeader: sortReverse|limitTo :pageSize'>
-          <td id='entry' editable-text="job.company" onaftersave="editJob(job)">
+          <td editable-text="job.company" onaftersave="editJob(job)" ng-mouseenter="options=true" ng-mouseleave="options=false">
           {{ job.company || "--" }}
-            <small><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
+            <small><span ng-show="options" class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
           </td>
-          <td id='entry' editable-text="job.jobTitle" onaftersave="editJob(job)">
+          <td editable-text="job.jobTitle" onaftersave="editJob(job)" ng-mouseenter="options=true" ng-mouseleave="options=false">
             {{job.jobTitle || "--" }}
-            <small><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
+            <small><span ng-show="options" class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
           </td>
-          <td id='entry' editable-select="job.interestLevel" e-ng-options="s.value as s.value for s in interestLevels"
-            onaftersave="editJob(job)">
+          <td editable-select="job.interestLevel" e-ng-options="s.value as s.value for s in interestLevels"
+            onaftersave="editJob(job)" ng-mouseenter="options=true" ng-mouseleave="options=false">
               {{ showInterestLevel(job) }}
-              <small><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
+              <small><span ng-show="options" class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
             </td>
-          <td id='entry' editable-select="job.status" e-ng-options="s.value as s.text for s in statuses"
-            onaftersave="editJob(job, $data)">
+          <td editable-select="job.status" e-ng-options="s.value as s.text for s in statuses"
+            onaftersave="editJob(job, $data)" ng-mouseenter="options=true" ng-mouseleave="options=false">
               {{ showStatus(job) }}
-              <small><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
+              <small><span ng-show="options" class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
             </td>
           <td> <button ng-click='getNews(job)' class='btn btn-default'>Get News</button></td>
           <td><span class="glyphicon glyphicon-eye-open" aria-hidden="true" ng-click="job.more = !job.more; showDate(job)"></span></td>
