--- a/client/app/mainList/singleJob.html
+++ b/client/app/mainList/singleJob.html
@@ -7,32 +7,32 @@
         <table class="table">
           <tr>
             <th>Location</th>
-            <td id='entry' editable-text="job.location" onaftersave="editJob(job)">{{ job.location || "--" }}
-              <small><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
+            <td id='entry' editable-text="job.location" onaftersave="editJob(job)" ng-mouseenter="options=true" ng-mouseleave="options=false">{{ job.location || "--" }}
+              <small><span ng-show="options" class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
             </td>
           </tr>
           <tr>
             <th>Contact person</th>
-            <td id='entry' editable-text="job.contactPerson" onaftersave="editJob(job)">{{ job.contactPerson || "--" }}
-              <small><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
+            <td id='entry' editable-text="job.contactPerson" onaftersave="editJob(job)"  ng-mouseenter="options=true" ng-mouseleave="options=false">{{ job.contactPerson || "--" }}
+              <small><span ng-show="options" class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
             </td>
           </tr>
           <tr>
             <th>Contact information</th>
-            <td id='entry' editable-text="job.contactInfo" onaftersave="editJob(job)">{{ job.contactInfo || "--" }}
-              <small><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
+            <td id='entry' editable-text="job.contactInfo" onaftersave="editJob(job)" ng-mouseenter="options=true" ng-mouseleave="options=false">{{ job.contactInfo || "--" }}
+              <small><span ng-show="options" class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
             </td>
           </tr>
           <tr>
             <th>Link to the job posting</th>
-            <td id='entry' editable-text="job.jobLink" onaftersave="editJob(job)">{{ job.jobLink || "--" }}
-              <small><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
+            <td id='entry' editable-text="job.jobLink" onaftersave="editJob(job)" ng-mouseenter="options=true" ng-mouseleave="options=false">{{ job.jobLink || "--" }}
+              <small><span ng-show="options" class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
             </td>
           </tr>
           <tr>
             <th>Date advertised</th>
-            <td id='entry' editable-date="job.age" onaftersave="showDate(job); editJob(job)">{{ job.niceDateString }}
-              <small><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
+            <td id='entry' editable-date="job.age" onaftersave="showDate(job); editJob(job)" ng-mouseenter="options=true" ng-mouseleave="options=false">{{ job.niceDateString }}
+              <small><span ng-show="options" class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
             </td>
           </tr>
         </table>
@@ -42,14 +42,14 @@
         <table class="table">
           <tr>
             <th>Job description</th>
-            <td id='entry' editable-textarea="job.description" onaftersave="editJob(job)">{{ job.description || "--" }}
-              <small><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
+            <td id='entry' editable-textarea="job.description" onaftersave="editJob(job)" ng-mouseenter="options=true" ng-mouseleave="options=false">{{ job.description || "--" }}
+              <small><span ng-show="options" class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
             </td>
           </tr>
           <tr>
             <th>Additional notes</th>
-            <td id='entry' editable-textarea="job.notes" onaftersave="editJob(job)">{{ job.notes || "--" }}
-              <small><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
+            <td id='entry' editable-textarea="job.notes" onaftersave="editJob(job)" ng-mouseenter="options=true" ng-mouseleave="options=false">{{ job.notes || "--" }}
+              <small><span ng-show="options" class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
             </td>
           </tr>
           <tr>
