[STYLE](Client): Make page buttons smaller {VE}

--- a/client/app/mainList/mainList.html
+++ b/client/app/mainList/mainList.html
@@ -83,11 +83,11 @@
         </tr>
       </tbody>
     </table>
-    <div class="col-md-4 col-md-offset-4">
-      <button id="first" class="btn btn-default" ng-disabled="pageButtonDisabled(-1)" ng-click="first()">First</button>&nbsp;
+    <small><div class="col-md-4 col-md-offset-4">
+      <small><button id="first" class="btn btn-default" ng-disabled="pageButtonDisabled(-1)" ng-click="first()">First</button>&nbsp;
        <button  id="previous" class = "btn btn-default" ng-disabled="pageButtonDisabled(-1)" ng-click="paginate(-1)">Previous</button>
        Page {{currentPage}} of {{totalPages}}
       <button id="next" class="btn btn-default" ng-disabled="pageButtonDisabled(1)" ng-click="paginate(1)">Next</button>&nbsp;
       <button id="last" class="btn btn-default" ng-disabled="pageButtonDisabled(1)" ng-click="last()">Last</button>
-    </div>
+    </div></small>
 </div>
