Delete extra small tag

--- a/client/app/mainList/mainList.html
+++ b/client/app/mainList/mainList.html
@@ -84,7 +84,7 @@
       </tbody>
     </table>
     <small><div class="col-md-4 col-md-offset-4">
-      <small><button id="first" class="btn btn-default" ng-disabled="pageButtonDisabled(-1)" ng-click="first()">First</button>&nbsp;
+      <button id="first" class="btn btn-default" ng-disabled="pageButtonDisabled(-1)" ng-click="first()">First</button>&nbsp;
        <button  id="previous" class = "btn btn-default" ng-disabled="pageButtonDisabled(-1)" ng-click="paginate(-1)">Previous</button>
        Page {{currentPage}} of {{totalPages}}
       <button id="next" class="btn btn-default" ng-disabled="pageButtonDisabled(1)" ng-click="paginate(1)">Next</button>&nbsp;
