--- a/client/index.html
+++ b/client/index.html
@@ -39,13 +39,8 @@
     <script src="app/demo/demo.js"></script>
     <script src="app/mainList/getNews/getNews.js"></script>
     <script src="app/mainList/removeModal/removeModal.js"></script>
-
     <script src="app/profile/profile.js"></script>
-    <script src="app/profile/editProfile.js"></script>
-    <script src="app/profile/changePassword.js"></script>
-
-
-
+    <script src="app/profile/profileDir.js"></script>
     <script src="app/services/externalApiFactory.js"></script>
     <script src="app/services/AuthFactory.js"></script>
     <script src="app/services/JobFactory.js"></script>
