--- a/client/app/navbar/navbar.html
+++ b/client/app/navbar/navbar.html
@@ -5,7 +5,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li ng-class="{active: isActive('/mainList')}"><a href="#/mainList">My Jobs</a></li>
         <li ng-class="{active: isActive('/stats')}"><a href="#/stats">My Stats</a></li>
-        <li ng-class="{active: isActive('/profile')}"><a href="#">My Profile</a></li>
+        <li ng-class="{active: isActive('/profile')}"><a href="#/profile">My Profile</a></li>
         <li><button type="button" class="btn btn-default navbar-btn" ng-click="logout()">{{navButton}}</button></li>
         
       </ul>
