--- a/client/app/demo/landing.html
+++ b/client/app/demo/landing.html
@@ -8,7 +8,7 @@
         <li><a href="/#/mainList">Home</a></li>
         <li><a href="/#/demo">Demo</a></li>
         <li><a href="/#/login">Login</a></li>
-        <li><a href="/#/signup">Signup</a></li>
+        <li><a href="/signup">Signup</a></li>
       </ul>
     </div>
   </nav>
