--- a/client/app/profile/changePassword.html
+++ b/client/app/profile/changePassword.html
@@ -1,31 +1,34 @@
-
-<!--  -->
-<!-- TO BE REDONE -->
-<div class="container" ng-model="data">
-  <div class="model" id="password_model">
-    <div class="model-header">
-      <h3>Change Password <span class="extra-title muted"></span></h3>
-    </div>
-    <div ng-show="passwordError" class="alert alert-danger col-sm-12">
-    {{passwordError}}
-    </div>
-      <div class="control-group">
-        <label for="new_password" class="control-label">New Password</label>
-        <div class="controls">
-          <input type="password" name="new_password" ng-minlength="6" ng-model="data.password">
-        </div>
-      </div>
-      <div class="control-group">
-        <label for="confirm_password" class="control-label">Confirm Password</label>
-        <div class="controls">
-          <input type="password" name="confirm_password" ng-minlength="6" ng-model="data.confirmpassword">
-        </div>
-        <br>
-      </div>
-    </div>
-    <div class="model-footer">
-      <button href="#" class="btn btn-default" data-dismiss="model" aria-hidden="true" ng-click='cancel()'>cancel</button>
-      <button href="#" class="btn btn-primary" id="password_model_save" ng-click='click()'>Save changes</button>
-    </div>
+<form name="changePasswordForm" ng-model="changePass">
+  <h3>Change Password</h3>
+  <br/>
+  <div class="input-group">
+    <label>Old Password</label>
+    <input type="password" ng-model='changePass.oldPassword'
+      class="form-control" name="oldPassword" placeholder="Old Password" required>
   </div>
-</div>
+
+  <div class="input-group">
+    <label>New Password</label>
+    <input type="password" name="newPassword" ng-model='changePass.newPassword'
+      class="form-control" placeholder="New Password" ng-minlength="6" required>
+  </div>
+
+  <div class="input-group">
+    <label>Confirm New Password</label>
+    <input type="password" class="form-control" ng-model='changePass.confirmPassword'
+    name="confirmPassword" match="changePass.newPassword" placeholder="Confirm New Password" match-ignore-empty="true" required>
+  </div>
+
+  <div ng-show="changePasswordForm.newPassword.$dirty && changePasswordForm.newPassword.$invalid" class="alert alert-danger col-sm-12">
+    Password must be at least 6 characters.
+  </div>
+
+  <div ng-show="changePasswordForm.confirmPassword.$error.match" class="alert alert-danger col-sm-12">
+    Passwords do not match.
+  </div>
+
+  <div>
+    <button type="button" class="btn btn-default" aria-hidden="true" ng-click='cancelPasswordChange()'>Cancel</button>
+    <button class="btn btn-default" type="submit">Save</button>
+  </div>
+</form>
