--- a/client/app/profile/profile.html
+++ b/client/app/profile/profile.html
@@ -1,18 +1,19 @@
 <nav-bar></nav-bar>
 <div class="container-fluid">
   <div class="row col-sm-10  col-sm-offset-1 well">
-            <!--  -->
-            <!-- Change Password -->
-            <!--  -->
-          <!-- <div class="col-sm-5 col-sm-offset-2"> -->
-            <!-- <change-password ng-show="showChangePassword"></change-password> -->
-          <!-- </div> -->
+    <div class="col-sm-5 col-sm-offset-1">
+      <br/>
+      <!--  -->
+      <!-- Change Password -->
+      <!--  -->
+      <div class="col-sm-10" ng-show="showChangePassword">
+        <change-password ></change-password>
+      </div>
       <!-- Show/Edit Profile -->
-    <form editable-form name="editProfileForm" type="form" onaftersave="updateProfile()">
-      <div class="col-sm-5 col-sm-offset-1">
-        <h3>Account Settings</h3>
-        <br/>
+      <form editable-form name="editProfileForm" type="form" onaftersave="updateProfile()">
         <div ng-hide="showChangePassword">
+          <h3>Account Settings</h3>
+          <br/>
           <div class="form-group col-lg-10">
             <label class="control-label">Username:</label>
             <span editable-text="user.username">{{ user.username || "--" }}</span>
@@ -22,7 +23,7 @@
             <span editable-text="user.firstname">{{ user.firstname || '--' }}</span>
           </div>
           <div class="form-group col-lg-10">
-            <label class="control-label">Username:</label>
+            <label class="control-label">Last name:</label>
             <span editable-text="user.lastname">{{ user.lastname || '--' }}</span>
           </div>
           <div class="form-group col-lg-10">
@@ -63,6 +64,6 @@
         <br/>
         <br/>
       </div> <!-- col-sm-3 col-sm-offset-1 -->
-    </form>
+      </form>
   </div>
 </div>
