[FIX](Client): Standardize navbar across all pages {VE}

--- a/client/app/auth/signup/signup.html
+++ b/client/app/auth/signup/signup.html
@@ -1,3 +1,4 @@
+<landing-dir></landing-dir>
 <div class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
   <div class="panel panel-info">
 
