--- a/client/app/demo/landing.html
+++ b/client/app/demo/landing.html
@@ -1,17 +1,16 @@
-<div class=" demoDiv container-fluid">
-  <nav class="navbar navbarDemo navbar-default">
+<!--   <nav class="navbar navbar-default col-md-12"">
     <div class="container-fluid">
-      <div class="navbar-header">
         <a class="navbar-brand" href="#">Jåger</a>
-      </div>
-      <ul class="nav navbar-nav">
+      <ul class="nav navbar-nav navbar-right">
         <li><a href="/#/mainList">Home</a></li>
         <li><a href="/#/demo">Demo</a></li>
         <li><a href="/#/login">Login</a></li>
         <li><a href="/#/signup">Signup</a></li>
       </ul>
     </div>
-  </nav>
+  </nav> -->
+<landing-dir></landing-dir>
+<div class=" demoDiv container-fluid">
   <div class="mainDemo row">
     <p class="col-md-4 text-center vertical-align demoP lead">
       Stay organized. Keep track of every application in one place with your My Jobs page.
@@ -20,7 +19,7 @@
       <p class="text-center lead demoPCtr">
         Control and monitor your job hunting & application process with Jåger. The indutry leading job application management platform.
       </p>
-      <a class="btn signUpBtn center-block btn-lg" href="/#/signup">Sign up right now!!!</a>
+      <a class="btn signUpBtn center-block btn-lg" href="/#/demo">Check out a Demo!</a>
     </div>
     <p class="col-md-4 text-center vertical-align demoP lead">
       Monitor your overall job applcation performance with real time stats.
