--- a/client/index.html
+++ b/client/index.html
@@ -44,6 +44,7 @@
     <script src="app/services/externalApiFactory.js"></script>
     <script src="app/services/AuthFactory.js"></script>
     <script src="app/services/JobFactory.js"></script>
+    <script src="app/main/main.js"></script>
 
     <script src="app/app.js"></script>
 
