[FIX](Client): Standardize navbar content and look across all pages {VE}

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -4,9 +4,9 @@
     <div>
       <ul class="nav navbar-nav navbar-right">
         <li ng-class="{active: isActive('/')}"><a href="#/">Home</a></li>
-        <li ng-class="{active: isActive('/stats')}"><a href="#/demo">Demo</a></li>
+        <li ng-class="{active: isActive('/stats')}"><a href="#/demo">See A Demo</a></li>
         <li ng-class="{active: isActive('/profile')}"><a href="#/login">Login</a></li>
-        <li><button type="button" class="btn btn-default navbar-btn" ng-click="logout()">{{navButton}}</button></li>
+        <li><button type="button" class="btn btn-default navbar-btn" ng-click="buttonFunc()">{{navButton}}</button></li>
         
       </ul>
     </div>
