[DEMO](Client): add demo functions to mainlist demo {IA}

--- a/client/index.html
+++ b/client/index.html
@@ -36,6 +36,7 @@
     <script src="app/mainList/mainList.js"></script>
     <script src="app/auth/signup/signup.js"></script>
     <script src="app/stats/stats.js"></script>
+    <script src="app/services/demoFactory.js"></script>
     <script src="app/demo/demo.js"></script>
     <script src="app/mainList/getNews/getNews.js"></script>
     <script src="app/mainList/removeModal/removeModal.js"></script>
