[change](singlejob) change route for signup button

--- a/client/app/demo/landing.html
+++ b/client/app/demo/landing.html
@@ -20,8 +20,8 @@
     <div class="col-md-4 divCtr">
       <h3  class="text-center demoPCtr">
         Take control of your job hunt with Jåger.
-    </h3>
-      <a class="btn signUpBtn center-block btn-lg" href="/#/demo">Check out a Demo!</a>
+      </h3>
+      <a class="btn signUpBtn center-block btn-lg" href="/#!/demo">Check out a Demo!</a>
     </div>
     <p class="col-md-4 text-center vertical-align demoP lead">
       Know how you're doing. Monitor your job applcation performance with real time stats.
