[FIX](Client): Update front page copy {VE}

--- a/client/app/demo/landing.html
+++ b/client/app/demo/landing.html
@@ -2,16 +2,16 @@
 <div class=" demoDiv container-fluid">
   <div class="mainDemo row">
     <p class="col-md-4 text-center vertical-align demoP lead">
-      Stay organized. Keep track of every application in one place with your My Jobs page.
+      Stay organized. Keep track of every application in one place.
     </p>
     <div class="col-md-4 divCtr">
-      <p class="text-center lead demoPCtr">
-        Control and monitor your job hunting & application process with Jåger. The indutry leading job application management platform.
-      </p>
+      <h3  class="text-center demoPCtr">
+        Take control of your job hunt with Jåger.
+    </h3>
       <a class="btn signUpBtn center-block btn-lg" href="/#/demo">Check out a Demo!</a>
     </div>
     <p class="col-md-4 text-center vertical-align demoP lead">
-      Monitor your overall job applcation performance with real time stats.
+      Know how you're doing. Monitor your job applcation performance with real time stats.
     </p>
   </div>
 
