--- a/client/app/demo/landing.html
+++ b/client/app/demo/landing.html
@@ -1,6 +1,6 @@
 <landing-dir></landing-dir>
 <div class=" demoDiv container-fluid">
-  <nav class="navbar navbarDemo navbar-default">
+  <!-- <nav class="navbar navbarDemo navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
         <a class="navbar-brand" href="#">Jåger</a>
@@ -12,7 +12,7 @@
         <li><a href="/#!/signup">Signup</a></li>
       </ul>
     </div>
-  </nav>
+  </nav> -->
   <div class="mainDemo row">
     <p class="col-md-4 text-center vertical-align demoP lead">
       Stay organized. Keep track of every application in one place.
