[FIX](Client): change wording, mirror demo profile page funcs {IA}

--- a/client/app/mainList/addJob.html
+++ b/client/app/mainList/addJob.html
@@ -3,11 +3,11 @@
   <form class="form-group">
     <div class="row form-row">
       <div class="col-lg-2">
-        <label for="company-name">Company name</label>
+        <label for="company-name">Company Name</label>
         <input type="text" class="form-control" id="company-name" ng-model="new.company" required>
       </div>
       <div class="col-lg-2">
-        <label for="job-title">Job title</label>
+        <label for="job-title">Job Title</label>
         <input type="text" class="form-control" id="job-title" ng-model="new.jobTitle">
       </div>
       <div class="col-lg-2">
@@ -15,17 +15,17 @@
         <input type="text" class="form-control" id="job-location" ng-model="new.location">
       </div>
       <div class="col-lg-2">
-        <label for="link">Link to posting</label>
+        <label for="link">Link to Posting</label>
         <input type="text" class="form-control" id="link" ng-model="new.jobLink">
       </div>
       <div class="col-lg-2">
-        <label for="interest-level">Interest level</label>
+        <label for="interest-level">Interest Level</label>
         <select class="form-control" id="interest-level" ng-init="new.interestLevel = new.interestLevel || interestLevels[0].value"
           ng-model="new.interestLevel" ng-options="level.value as level.value for level in interestLevels">
         </select>
       </div>
       <div class="col-lg-2">
-        <label for="status">Application status</label>
+        <label for="status">Application Status</label>
         <select class="form-control" id="status" ng-model="new.status" ng-init="new.status = new.status || statuses[0].value"
         ng-options="status.value as status.text for status in statuses">
         </select>
@@ -33,29 +33,29 @@
     </div> <!-- row --> <br>
     <div class="row form-row">
       <div class="col-lg-2">
-        <label for="contact-person">Contact person</label>
+        <label for="contact-person">Contact Person</label>
         <input type="text" class="form-control" id="contact-person" ng-model="new.contactPerson">
       </div>
       <div class="col-lg-2">
-        <label for="contact-info">Contact information</label>
+        <label for="contact-info">Contact Information</label>
         <input type="text" class="form-control" id="contact-info" ng-model="new.contactInfo">
       </div>
       <div class="col-lg-2">
-        <label for="date">Date advertised</label>
+        <label for="date">Date Advertised</label>
         <input type="date" class="form-control" id="date" ng-model="new.age">
       </div>
       <div class="col-lg-3">
-        <label for="date">Job description/requirements</label>
+        <label for="date">Job Description/Requirements</label>
         <textarea class="form-control" id="date" ng-model="new.description"/>
       </div>
       <div class="col-lg-3">
-        <label for="date">Additional notes</label>
+        <label for="date">Additional Notes</label>
         <textarea class="form-control" id="date" ng-model="new.notes"/>
       </div>
     </div> <!-- row --> <br>
     <div class="row">
       <div class="col-lg-2 col-lg-offset-8">
-        <button class="btn btn-default" type="submit" ng-click="openAddJobForm = !openAddJobForm">Add to my job list</button>
+        <button class="btn btn-default" type="submit" ng-click="openAddJobForm = !openAddJobForm">Add to My Job List</button>
       </div>
     </div> <!-- row -->
   </form>
