--- a/client/app/mainList/mainList.html
+++ b/client/app/mainList/mainList.html
@@ -5,7 +5,7 @@
     <div class="row">
 
       <div class="col-sm-2 col-sm-offset-1">
-        <button class="btn btn-default" type="button" ng-click="openAddJobForm = !openAddJobForm">Add a job</button>
+        <button class="btn btn-default" type="button" ng-click="openAddJobForm = !openAddJobForm">Add a Job</button>
       </div><!-- /.col-sm-2 -->
 
       <div class="col-sm-6">
