--- a/client/app/mainList/singleJob.html
+++ b/client/app/mainList/singleJob.html
@@ -12,25 +12,25 @@
             </td>
           </tr>
           <tr>
-            <th>Contact person</th>
+            <th>Contact Person</th>
             <td id='entry' editable-text="job.contactPerson" onaftersave="editJob(job)"  ng-mouseenter="options=true" ng-mouseleave="options=false">{{ job.contactPerson || "--" }}
               <small><span ng-show="options" class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
             </td>
           </tr>
           <tr>
-            <th>Contact information</th>
+            <th>Contact Information</th>
             <td id='entry' editable-text="job.contactInfo" onaftersave="editJob(job)" ng-mouseenter="options=true" ng-mouseleave="options=false">{{ job.contactInfo || "--" }}
               <small><span ng-show="options" class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
             </td>
           </tr>
           <tr>
-            <th>Link to the job posting</th>
+            <th>Link to the Job Posting</th>
             <td id='entry' editable-text="job.jobLink" onaftersave="editJob(job)" ng-mouseenter="options=true" ng-mouseleave="options=false">{{ job.jobLink || "--" }}
               <small><span ng-show="options" class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
             </td>
           </tr>
           <tr>
-            <th>Date advertised</th>
+            <th>Date Advertised</th>
             <td id='entry' editable-date="job.age" onaftersave="showDate(job); editJob(job)" ng-mouseenter="options=true" ng-mouseleave="options=false">{{ job.niceDateString }}
               <small><span ng-show="options" class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
             </td>
@@ -41,19 +41,19 @@
       <div class="col-lg-6 ">
         <table class="table">
           <tr>
-            <th>Job description</th>
+            <th>Job Description</th>
             <td id='entry' editable-textarea="job.description" onaftersave="editJob(job)" ng-mouseenter="options=true" ng-mouseleave="options=false">{{ job.description || "--" }}
               <small><span ng-show="options" class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
             </td>
           </tr>
           <tr>
-            <th>Additional notes</th>
+            <th>Additional Notes</th>
             <td id='entry' editable-textarea="job.notes" onaftersave="editJob(job)" ng-mouseenter="options=true" ng-mouseleave="options=false">{{ job.notes || "--" }}
               <small><span ng-show="options" class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
             </td>
           </tr>
           <tr>
-            <th>Upload your resume and cover letter</th>&nbsp;
+            <th>Upload Your Resume and Cover Letter</th>&nbsp;
             <td><input type="file" id="resumefile" name='Nik' file-model="myfile" /></td>
             <td><button class="btn btn-default" ng-click="addFile()" type="button">Upload</button></td>
           </tr>
