--- a/client/app/mainList/mainList.html
+++ b/client/app/mainList/mainList.html
@@ -73,8 +73,8 @@
               <small><span ng-show="options" class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
             </td>
           <td> <button ng-click='getNews(job)' class='btn btn-default'>Get News</button></td>
-          <td><span class="glyphicon glyphicon-eye-open" aria-hidden="true" ng-click="job.more = !job.more; showDate(job)"></span></td>
-          <td><span class="glyphicon glyphicon-remove" aria-hidden="true" ng-click="removeJob(job)"></span></td>
+          <td class="text-center"><span class="glyphicon glyphicon-eye-open" aria-hidden="true" ng-click="job.more = !job.more; showDate(job)"></span></td>
+          <td class="text-center"><span class="glyphicon glyphicon-remove" aria-hidden="true" ng-click="removeJob(job)"></span></td>
         </tr>
         <tr ng-if="job.more" ng-repeat-end="">
           <td colspan="7">
