--- a/client/app/mainList/removeModal/removeModal.html
+++ b/client/app/mainList/removeModal/removeModal.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <h3 class="modal-title">Removing a job...</h3>
+    <h3 class="modal-title">Removing a Job...</h3>
 </div>
 <div class="modal-body">
     Are you sure you want to delete this job?
