--- a/client/index.html
+++ b/client/index.html
@@ -46,6 +46,7 @@
     <script src="app/services/AuthFactory.js"></script>
     <script src="app/services/JobFactory.js"></script>
     <script src="app/main/main.js"></script>
+    <script src="app/profile/deleteModal.js"></script>
 
     <script src="app/app.js"></script>
 
