[DEMO](CLient): complete demo stats, refactore stats funcs to be a factory {IA}

--- a/client/index.html
+++ b/client/index.html
@@ -47,6 +47,7 @@
     <script src="app/services/JobFactory.js"></script>
     <script src="app/main/main.js"></script>
     <script src="app/profile/deleteModal.js"></script>
+    <script src="app/services/StatsFactory.js"></script>
 
     <script src="app/app.js"></script>
 
